2002-03-12  Cristy  <cristy@mystic.es.dupont.com>
  * Changed Clone*Info() API so structure members are set directly rather
    than by the *clone=*info method (suggested by William Radcliffe).

2002-03-11  Cristy  <cristy@mystic.es.dupont.com>
  * Added AcquireString() to allocate read-only strings.

2002-03-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * coders/null.c (WriteNULLImage): Support writing "null:" image type
    for use when profiling or testing ImageMagick.

2002-03-08 Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
  * Update to Autoconf 2.53 (new release)
  * Update to Automake 1.6 (new release)

2002-03-07  Cristy  <cristy@mystic.es.dupont.com>
  * Bob Friesenhahn's execution profile results in a number of speed-ups
    with a faster LocaleCompare() algorithm and self-adjusting lists.
  * Recognize additional DCM metadata (suggested by Barry Branham).
  * Fixed CopyOpacity composite operator for CMYKA images.

2002-03-06  Cristy  <cristy@mystic.es.dupont.com>
  * Inlined AlphaComposite() and ValidateColormapIndex().
  * Corrected compositing algorithm for the case where both source and
    destination pixels had opacity values that were neither fully transparent
    nor fully opaque.

2002-03-05  Cristy  <cristy@mystic.es.dupont.com>
  * Memory overrun when drawing large circles.

2002-03-04  Cristy  <cristy@mystic.es.dupont.com>
  * Removed bug introduced into Bob's Base64Encode() method.

2002-03-02  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
  * Added Base64Decode() and Base64Encode() to utility.c and updated
    ReadInlineImage() in magick/constitute.c to use Base64Decode().

2002-03-01  Cristy  <cristy@mystic.es.dupont.com>
  * GetTypeInfoByFamily() null pointer fault (reported by Bob Friesenhahn).
  * Added module version number (patch by Glenn Randers-Pehrson).

2002-03-01  Glenn Randers-Pehrson  <randeg@alum.rpi.edu>
  * image->matte was not being set when reading GRAY-ALPHA PNG files.
