@@ -23,6 +23,14 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-03-13  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * A number of formats (e.g. JPEG, PS) did not handle DirectClass
+    grayscale images properly.
+
+2002-03-12  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Changed Clone*Info() API so structure members are set directly rather
+    than by the *clone=*info method (suggested by William Radcliffe).
+
 2002-03-11  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Added AcquireString() to allocate read-only strings.
 
