@@ -1,3 +1,7 @@
+2002-03-13  Cristy  <cristy@mystic.es.dupont.com>
+  * A number of formats (e.g. JPEG, PS) did not handle DirectClass
+    grayscale images properly.
+
 2002-03-12  Cristy  <cristy@mystic.es.dupont.com>
   * Changed Clone*Info() API so structure members are set directly rather
     than by the *clone=*info method (suggested by William Radcliffe).
